--- a/hadoop-config.yml
+++ b/hadoop-config.yml
@@ -1,7 +1,7 @@
 # Configure Name Node
 
 - name: Configuring Hadoop
-  hosts: 172.20.10.6
+  hosts: namenode
 
   tasks:
   - name: Sending hadoop Package
@@ -56,7 +56,7 @@
 # Configure Data Node
 
 - name: Configuring Hadoop
-  hosts: 172.20.10.3
+  hosts: datanode
 
   tasks:
   - name: Sending hadoop Package
